# Arch-Linux-Ollama-LLM-Chat

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_HANDOFF.txt  CONTINUATION_PROMPT.md  CRITICAL_ANALYSIS.md  FINAL_STATUS.md  PKGBUILD  README.md  REFACTORING_COMPLETE.md  REFACTORING_IMPLEMENTATION_PLAN.md  REFACTORING_PROGRESS.md  config.example.toml  prompt-enhanced.md  pyproject.toml
.github/workflows/: ci.yml
.windsurf/rules/: python-rules.md  simple-rules.md
ollama_chat/: __init__.py  __main__.py  app.py  capabilities.py  chat.py  commands.py  config.py  exceptions.py  logging_utils.py  message_store.py  persistence.py  screens.py  state.py  stream_handler.py  task_manager.py  tools.py
ollama_chat/widgets/: __init__.py  activity_bar.py  code_block.py  conversation.py  input_box.py  message.py  status_bar.py
src/ollama_chat/: __main__.py  app.py  capability_cache.py  chat.py  commands.py  config.py  custom_tools.py  exceptions.py  logging_utils.py  message_store.py  persistence.py  screens.py  stream_handler.py  tooling.py  tools.py
src/ollama_chat/events/: __init__.py  bus.py  domain.py
src/ollama_chat/managers/: __init__.py  attachment.py  capability.py  command.py  connection.py  conversation.py  message_renderer.py  stream.py  theme.py
src/ollama_chat/plugins/: __init__.py  interface.py
src/ollama_chat/support/: __init__.py  bus.py  file_time.py  lsp_client.py  permission.py  question_service.py  ripgrep.py
src/ollama_chat/tools/: __init__.py  abstracts.py  apply_patch_tool.py  base.py  bash_tool.py  batch_tool.py  codesearch_tool.py  edit_tool.py  external_directory.py  glob_tool.py  grep_tool.py  invalid_tool.py  ls_tool.py  lsp_tool.py  multiedit_tool.py  plan_tool.py  question_tool.py  read_tool.py  registry.py  task_tool.py  (+7 more)
tests/: test_app.py  test_app_actions.py  test_app_runtime.py  test_capabilities.py  test_chat.py  test_config.py  test_custom_tools.py  test_exceptions.py  test_logging.py  test_main_entrypoint.py  test_message_store.py  test_package_exports.py  test_persistence.py  test_render_batching.py  test_slash_commands.py  test_state.py  test_stream_handler.py  test_task_manager.py  test_tools.py  test_tools_refactor.py  test_widgets.py
(+5 files in other folders)
